--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -48,26 +48,40 @@
   <h2>Education</h2>
 </button>
 
-<div class="education-section">
+<div id="content-education" class="collapse in">
+  <table style="width: 100%; border: 0px; border-spacing: 0px; border-collapse: collapse; margin: auto;">
+    <tbody>
+      <tr>
+        <td style="padding: 2.5% 2.5% 0 2.5%; width: 15%; vertical-align: top; text-align: center; min-width: 120px;">
+          <div class="one">
+            <img src="{{ site.baseurl }}/images/tum-logo.png" style="width: 40%; height: auto;" alt="Technical University of Munich logo">
+          </div>
+        </td>
+        <td style="padding: 2.5% 2.5% 0 2.5%; width: 85%; vertical-align: top;">
+          <span style="font-size: 1.2em; font-weight: bold;">M.Sc - Technical University of Munich</span>
+          <div style="color: grey; font-size: 0.9em; margin: 0; padding: 0;">Munich, Germany - Oct 2021 - Aug 2024</div>
+          <p align="justify" style="margin: 0; padding: 0;">
+            Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">(IEEE, ICRA 2025)</a>
+          </p>
+        </td>
+      </tr>
 
-  <div class="education-entry">
-    <img src="tum_logo.png" class="education-logo" />
-    <div>
-      <h3>M.Sc – Technical University of Munich</h3>
-      <p><em>Munich, Germany – Oct 2021 – Aug 2024</em></p>
-      <p>Open World 3D Scene Understanding using Foundation Models. <a href="#">(IEEE, ICRA 2025)</a></p>
-    </div>
-  </div>
-
-  <div class="education-entry">
-    <img src="ned_logo.png" class="education-logo" />
-    <div>
-      <h3>B.Eng – NED University of Engineering and Technology</h3>
-      <p><em>Karachi, Pakistan – Dec 2015 – Aug 2019</em></p>
-      <p>Numerical Investigation of Heat Transfer Enhancement in Impinging Jets. <a href="#">(Wiley, Heat Transfer)</a></p>
-    </div>
-  </div>
-
+      <tr>
+        <td style="padding: 0 2.5% 2.5% 2.5%; width: 15%; vertical-align: top; text-align: center; min-width: 120px;">
+          <div class="one">
+            <img src="{{ site.baseurl }}/images/ned-logo.png" style="width: 40%; height: auto;" alt="NED University of Engineering and Technology logo">
+          </div>
+        </td>
+        <td style="padding: 0 2.5% 2.5% 2.5%; width: 85%; vertical-align: top;">
+          <span style="font-size: 1.2em; font-weight: bold;">B.Eng - NED University of Engineering and Technology</span>
+          <div style="color: grey; font-size: 0.9em; margin: 0; padding: 0;">Karachi, Pakistan - Dec 2015 - Aug 2019</div>
+          <p align="justify" style="margin: 0; padding: 0;">
+            Numerical Investigation of Heat Transfer Enhancement in Impinging Jets. <a href="https://doi.org/10.1002/htj.21986">(Wiley, Heat Transfer)</a>
+          </p>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
 
   
