--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -54,14 +54,14 @@
       <tr>
         <td style="padding: 2.5% 2.5% 0 2.5%; width: 15%; vertical-align: top; text-align: center; min-width: 120px;">
           <div class="one">
-            <img src="{{ site.baseurl }}/images/tum-logo.png" style="width: 40%; height: auto;" alt="Technical University of Munich logo">
+            <img src="{{ site.baseurl }}/images/tum-logo.png" style="width: 40%; height: auto;" alt="TUM logo">
           </div>
         </td>
         <td style="padding: 2.5% 2.5% 0 2.5%; width: 85%; vertical-align: top;">
           <span style="font-size: 1.2em; font-weight: bold;">M.Sc - Technical University of Munich</span>
-          <div style="color: grey; font-size: 0.9em; margin: 0; padding: 0;">Munich, Germany - Oct 2021 - Aug 2024</div>
+          <div style="color: grey; font-size: 0.9em; margin: 0; padding: 0;"> 10.2021 - 08.2024 | Munich, Germany</div>
           <p align="justify" style="margin: 0; padding: 0;">
-            Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">(IEEE, ICRA 2025)</a>
+            Thesis: Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">(IEEE, ICRA 2025)</a>
           </p>
         </td>
       </tr>
@@ -69,14 +69,14 @@
       <tr>
         <td style="padding: 0 2.5% 2.5% 2.5%; width: 15%; vertical-align: top; text-align: center; min-width: 120px;">
           <div class="one">
-            <img src="{{ site.baseurl }}/images/ned-logo.png" style="width: 40%; height: auto;" alt="NED University of Engineering and Technology logo">
+            <img src="{{ site.baseurl }}/images/ned-logo.png" style="width: 40%; height: auto;" alt="NED logo">
           </div>
         </td>
         <td style="padding: 0 2.5% 2.5% 2.5%; width: 85%; vertical-align: top;">
           <span style="font-size: 1.2em; font-weight: bold;">B.Eng - NED University of Engineering and Technology</span>
-          <div style="color: grey; font-size: 0.9em; margin: 0; padding: 0;">Karachi, Pakistan - Dec 2015 - Aug 2019</div>
+          <div style="color: grey; font-size: 0.9em; margin: 0; padding: 0;">12.2025 - 08.2019 | Karachi, Pakistan </div>
           <p align="justify" style="margin: 0; padding: 0;">
-            Numerical Investigation of Heat Transfer Enhancement in Impinging Jets. <a href="https://doi.org/10.1002/htj.21986">(Wiley, Heat Transfer)</a>
+            Thesis: Numerical Investigation of Heat Transfer Enhancement in Impinging Jets. <a href="https://doi.org/10.1002/htj.21986">(Wiley, Heat Transfer)</a>
           </p>
         </td>
       </tr>
