--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -52,12 +52,12 @@
   <table style="width: 100%; border: 0px; border-spacing: 0px; border-collapse: collapse; margin: auto;">
     <tbody>
       <tr>
-        <td style="padding: 2.5% 2.5% 0 2.5%; width: 15%; vertical-align: middle; text-align: center; min-width: 120px;">
+        <td style="padding: 2.5% 2.5% 0 2.5%; width: 10%; vertical-align: top; text-align: center; min-width: 120px;">
           <div class="one">
             <img src="{{ site.baseurl }}/images/tum-logo.png" style="width: 40%; height: auto;" alt="TUM logo">
           </div>
         </td>
-        <td style="padding: 2.5% 2.5% 0 2.5%; width: 85%; vertical-align: middle;">
+        <td style="padding: 2.5% 2.5% 0 2.5%; width: 90%; vertical-align: top;">
           <span style="font-size: 1.2em; font-weight: bold;">M.Sc - Technical University of Munich</span>
           <div style="color: grey; font-size: 0.9em; margin: 0; padding: 0;"> 10.2021 - 08.2024 | Munich, Germany</div>
           <p align="justify" style="margin: 0; padding: 0;">
@@ -67,12 +67,12 @@
       </tr>
 
       <tr>
-        <td style="padding: 0 2.5% 2.5% 2.5%; width: 15%; vertical-align: middle; text-align: center; min-width: 120px;">
+        <td style="padding: 0 2.5% 2.5% 2.5%; width: 10%; vertical-align: top; text-align: center; min-width: 120px;">
           <div class="one">
             <img src="{{ site.baseurl }}/images/ned-logo.png" style="width: 40%; height: auto;" alt="NED logo">
           </div>
         </td>
-        <td style="padding: 0 2.5% 2.5% 2.5%; width: 85%; vertical-align: middle;">
+        <td style="padding: 0 2.5% 2.5% 2.5%; width: 90%; vertical-align: top;">
           <span style="font-size: 1.2em; font-weight: bold;">B.Eng - NED University of Engineering and Technology</span>
           <div style="color: grey; font-size: 0.9em; margin: 0; padding: 0;">12.2025 - 08.2019 | Karachi, Pakistan </div>
           <p align="justify" style="margin: 0; padding: 0;">
